docs: renamed folders, added Favicon
Created basic favicon. renamed folders to reflect artist portfolio type website/page.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RachelPayette - Artist</title>
+    <link rel="icon" type="image/x-icon" href="./Photo-webpage/favicon.ico"
+    >
 </head>
 <body>
     <!--first section//-->
@@ -13,26 +15,39 @@
  height="90"
  >
  
- <h2> Ongoing Projects</h2>  
+ <h2> Visual Artist</h2>  
  <nav>
     <ul>
-        <li><a href="./Pages/Visual Design/index.html">Design </a></li>
-        <li><a href="./about/">About</a></li>
-        <li><a href="./contact">Contact</a></li>
+        <li><a href="./Pages/Illustrations/index.html">Illustrations </a></li>
+        <li><a href="./Pages/Designs/index.html">Designs</a></li>
+        <li><a href="./Pages/process/index.html">Process</a></li>
+        <li><a href="./Pages/About me/index.html"> About Me</a> </li>
     </ul>
 </nav>
 
- <p> paragraph here, do the words and stuff </p> 
+<div class="container">
+  <!--second section//-->
+    <section>
+    <h2>
 
- <!--second section//-->
+    </h2>
+    <p> paragraph here, do the words and stuff </p> 
+</section>
+
+ <!--Third section//-->
+<section>
  <h2> Heading 2</h2>
 
  <p> another paragraph here. more words and such</p>
- 
- <!--thrird section//-->
+</section>
+
+<section>
+ <!--Fourth section//-->
  <h3> Heading 3 </h3>
 
  <p> Paragraph here </p>
+</section>
+
 
  <!--List//-->
  <ul> 
@@ -43,10 +58,13 @@
  </ul>
 
  <!--Link//-->
- <link href="/Webpage dev/CSS/main.css"
+ <link href="./CSS/main.css"
  rel="stylesheet" type="text/css">
 
- <!--Table//-->
+
+</div>
+ 
+<!--Table//-->
  <table>
     <thead>
         <th>
