Docs: Table edit & Live links
Added content to table at bottom pf page 1.
Used live links to linkedin & instagram.
**need to have someone test to see if links work on their system of if mine are somehow locally saved?**

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     >
 </head>
 <body>
-    <!--first section//-->
- <!--Image//-->
+<!--first section-->
+    
+<!--Image-->
  <img src="./Photo-webpage/R VI Logo.png" 
  alt="R logo with ink splatter effect to create an image that shows R and Vi"
  height="90"
  >
- 
+ <!--Heading-->
  <h2> Visual Artist</h2>  
  <nav>
     <ul>
@@ -26,7 +27,7 @@
 </nav>
 
 <div class="container">
-  <!--second section//-->
+  <!--second section-->
     <section>
     <h2>
 
@@ -34,7 +35,7 @@
     <p> paragraph here, do the words and stuff </p> 
 </section>
 
- <!--Third section//-->
+ <!--Third section-->
 <section>
  <h2> Heading 2</h2>
 
@@ -42,14 +43,14 @@
 </section>
 
 <section>
- <!--Fourth section//-->
+ <!--Fourth section-->
  <h3> Heading 3 </h3>
 
  <p> Paragraph here </p>
 </section>
 
 
- <!--List//-->
+ <!--List-->
  <ul> 
     <li> one</li>
     <li> Two</li>
@@ -57,30 +58,35 @@
     <li> and so on</li>
  </ul>
 
- <!--Link//-->
+ <!--Link-->
  <link href="./CSS/main.css"
  rel="stylesheet" type="text/css">
 
 
 </div>
  
-<!--Table//-->
- <table>
-    <thead>
-        <th>
-            <td> Heading one</td>
-            <td> Heading 2</td>
-            <td> Heading three</td>
-        </th>
-    </thead>
-    <tbody>
-        <tr>
-            <td> 1 data</td>
-            <td> 2 data</td>
-            <td> 3 data</td>
-        </tr>
-    </tbody>
- </table>
+<!--Table-->
+<section>
+<h2 style="color:#7f538b;text-align:left;">Find me on</h2>
 
+<table>
+    <tr style="color:#4a0c44;text-align: left;">
+      <th>Platform</th>
+      <th>Handle</th>
+      <th>Purpose</th>
+    </tr>
+    <tr>
+      <td>Instagram</td>
+      <td><a href="https://www.instagram.com/rachel_vi_arts/?hl=en">Rachel vi Arts</a>
+    </td>
+      <td>See my art!</td>
+    </tr>
+    <tr>
+      <td>LinkedIn</td>
+      <td><a href="https://www.linkedin.com/in/rachel-vi-payette/">Rachel Payette</a></td>
+      <td>Contact me!</td>
+    </tr>
+  </table>
+</section>
 </body>
 </html>
