Docs: Adjusted Nav Bar
Adjusted spacing on Nav-Bar, added CSS aspects for color.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
  height="90"
  >
  <!--Heading-->
+ <header>
  <h2> Visual Artist</h2>  
+</header>
+
+<!--navigation-->
  <nav>
     <ul>
         <li><a href="./Pages/Illustrations/index.html">Illustrations </a></li>
