--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--Styling-->
+  <style>
+  table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #9A5C94;
+}
+
+tr:hover {background-color: #c6a9ce;}
+  </style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +25,13 @@
 <body>
 <!--first section-->
     
-<!--Image-->
+<!--Images top-->
+
+
  <img src="./Photo-webpage/R VI Logo.png" 
  alt="R logo with ink splatter effect to create an image that shows R and Vi"
  height="90"
+ class="logo"
  >
  <!--Heading-->
  <header>
@@ -29,6 +47,28 @@
         <li><a href="./Pages/About me/index.html"> About Me</a> </li>
     </ul>
 </nav>
+
+<!--Image set-->
+<div id="Showcase" id="medusa" >
+  <div class="artwork" >
+      <img src="./Photo-webpage/Medusa - WIP.jpg" 
+      alt="An interpretation of medusa: a long-necked woman with dramatically enlarged eyes. Done in watervolor and Ink by Rachel Payette"
+      height="200">
+    </div>
+
+  <div class="artwork" id="JoyRide" >
+      <img src="./Photo-webpage/JoyRide.png"
+      alt="Demon-girl in neon colors with two horns extending off pahe. Wild expression and open mouth. Done in digital art style. by Rachel Payette"
+      height="200">
+  </div>
+
+  <div class="artwork" id="windswept" >
+      <img src="./Photo-webpage/Windswept - classic.jpg"
+      alt="Green mother-earth looking woman, with angular blue and black hair blowing to the left, as if by the wind. Digital media medium. by Rachel Payette"
+      height="200">
+  </div>
+  </div>
+
 
 <div class="container">
   <!--second section-->
@@ -54,7 +94,7 @@
 </section>
 
 
- <!--List-->
+ <!--List, unordered-->
  <ul> 
     <li> one</li>
     <li> Two</li>
@@ -71,7 +111,10 @@
  
 <!--Table-->
 <section>
-<h2 style="color:#7f538b;text-align:left;">Find me on</h2>
+<h2 style="color:#ffffff;
+text-align:left;
+background-color:#9A5C94;" 
+  >Find me on</h2>
 
 <table>
     <tr style="color:#4a0c44;text-align: left;">
