Docs:  removed design, added about me content
Fleshed out "About me" with content. Removed "design" page as it's redundant.

--- a/Pages/process/index.html
+++ b/Pages/process/index.html
@@ -13,7 +13,6 @@
     <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="./Pages/Illustrations/index.html">Illustrations </a></li>
-        <li><a href="./Pages/Designs/index.html">Designs</a></li>
         <li><a href="./Pages/About me/index.html"> About Me</a> </li>
     </ul>
 </nav>
@@ -24,31 +23,54 @@
          my creative process is deeply rooted in my experience with alcohol ink and pencil. 
          These mediums allow me to explore fluidity and precision, giving life to the portraits and character drawings. 
          While I’ve worked with a variety of tools, I find myself most drawn to classic pencil sketches of the human form.
-          <br> 
-          <br>I'm often inspired by the <strong>music </strong> I’m listening to or by <strong>memories </strong>that resonate with me. Even a simple, 
-          pleasant conversation can ignite my imagination and push me toward the canvas, 
-          whether it’s physical or digital.
+          
 
         My artistic style leans toward neotraditional, but I’m on a personal journey to carve out something uniquely mine. 
         Each piece I create is a reflection of where I am in my artistic growth—an evolving blend of what I know 
         and what I’m learning.</p>
    </section>
 
-   
-   <!--Fourth section-->
+   <!--inspiration-->
+<h3> Inspiration</h3>
+<p>I'm often inspired by the <strong>music </strong> I’m listening to or by <strong>memories </strong>that resonate with me. Even a simple, 
+    pleasant conversation can ignite my imagination and push me toward the canvas, 
+    whether it’s physical or digital.
+
+</p>
+
+   <!--Mediums-->
    <section>
-    <h3> Heading 3 </h3>
-   
-    <p> Paragraph here </p>
+    <h3> Mediums </h3>
+    <p> Of the many mediums I've worked with, 
+        a few have always resonated with me on a deeper level.
+    Namely:</p>
    
 </section>
    
    
-    <!--Mediums-->
+    <!--Mediums list-->
     <ul> 
-       <li> one</li>
-       <li> Two</li>
-       <li> Three</li>
-       <li> and so on</li>
+       <li> Alcohol Markers</li>
+       <li> Pencil</li>
+       <li> ink</li>
+       <li> Watercolor</li>
     </ul>
-   
+
+<!--process-->
+<h3> Process </h3>
+        <p> My creative process begins with finding inspiration from my daily life, 
+            whether it’s through music, memories, or conversations. 
+            I take mental notes of these moments, 
+            which later fuel my artistic vision. 
+            From there, I break the process into several key steps:</p>
+
+<!--process list-->
+   <ol>
+    <li> Take note whatever inspires me day-to-day </li>
+    <li> create a quick sketch of the concept in my mind </li>
+    <li> find reference photos to map out shadows and refine the details of the sketch </li>
+    <li>  recreate the drawing in a designated sketchbook</li>
+    <li>  test color combinations and explore shading options</li>
+    <li>  choose a style that complements the composition, considering the mood or theme I want to convey</li>
+    <li> complete the piece in the medium and style that best fits, balancing texture, depth, and form </li>
+   </ol>
