--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@ tr:hover {background-color: #c6a9ce;}
  <nav>
     <ul>
         <li><a href="./Pages/Illustrations/index.html">Illustrations </a></li>
-        <li><a href="./Pages/Designs/index.html">Designs</a></li>
         <li><a href="./Pages/process/index.html">Process</a></li>
         <li><a href="./Pages/About me/index.html"> About Me</a> </li>
     </ul>
@@ -73,36 +72,18 @@ tr:hover {background-color: #c6a9ce;}
 <div class="container">
   <!--second section-->
     <section>
+      <div class="slogan">
     <h2>
-
+Ink
+<br> & 
+<br> Ecentricity
     </h2>
-    <p> paragraph here, do the words and stuff </p> 
+  </div>
+
 </section>
 
- <!--Third section-->
-<section>
- <h2> Heading 2</h2>
-
- <p> another paragraph here. more words and such</p>
-</section>
-
-<section>
- <!--Fourth section-->
- <h3> Heading 3 </h3>
-
- <p> Paragraph here </p>
-</section>
-
-
- <!--List, unordered-->
- <ul> 
-    <li> one</li>
-    <li> Two</li>
-    <li> Three</li>
-    <li> and so on</li>
- </ul>
-
- <!--Link-->
+ 
+ <!--Link to css-->
  <link href="./CSS/main.css"
  rel="stylesheet" type="text/css">
 
@@ -114,24 +95,29 @@ tr:hover {background-color: #c6a9ce;}
 <h2 style="color:#ffffff;
 text-align:left;
 background-color:#9A5C94;" 
-  >Find me on</h2>
+  >Contact me on</h2>
 
 <table>
     <tr style="color:#4a0c44;text-align: left;">
-      <th>Platform</th>
+      <th>Social Media</th>
       <th>Handle</th>
-      <th>Purpose</th>
+      <th>Reason</th>
     </tr>
     <tr>
       <td>Instagram</td>
       <td><a href="https://www.instagram.com/rachel_vi_arts/?hl=en">Rachel vi Arts</a>
     </td>
-      <td>See my art!</td>
+      <td>Follow me</td>
     </tr>
     <tr>
       <td>LinkedIn</td>
       <td><a href="https://www.linkedin.com/in/rachel-vi-payette/">Rachel Payette</a></td>
-      <td>Contact me!</td>
+      <td>Contact me</td>
+    </tr>
+    <tr>
+      <td>Email</td>
+      <td><a href="mailto:rachelvipayette@gmail.com">RachelViPayette</a></td>
+      <td>Request comissions</td>
     </tr>
   </table>
 </section>
