Docs: Illustration content & footer
Added photos to illustration page. Added footers to all pages. Copyright added.

--- a/Pages/process/index.html
+++ b/Pages/process/index.html
@@ -74,3 +74,9 @@
     <li>  choose a style that complements the composition, considering the mood or theme I want to convey</li>
     <li> complete the piece in the medium and style that best fits, balancing texture, depth, and form </li>
    </ol>
+
+   <!--footer-->
+<footer>
+    <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+    <p></p>
+  </footer>
