--- a/index.html
+++ b/index.html
@@ -122,4 +122,12 @@ background-color:#9A5C94;"
   </table>
 </section>
 </body>
+
+<!--footer-->
+<footer>
+  <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+  <p></p>
+</footer>
+
+
 </html>
