--- a/Pages/About me/index.html
+++ b/Pages/About me/index.html
@@ -1,7 +1,8 @@
  <!--Link to css-->
  <link href="/Pages/About me/main.css"
  rel="stylesheet" type="text/css">
-<!--heading-->
+
+ <!--heading-->
 <header>
     <h1> About Me  </h1>  
    </header>
@@ -36,3 +37,9 @@
 <h2> Thank you for visiting my site. 
 </h2>
 <h3> Please feel free to reach out if you have any questions or requests</h3>
+
+<!--footer-->
+<footer>
+    <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+    <p></p>
+  </footer>
