--- a/Pages/Illustrations/index.html
+++ b/Pages/Illustrations/index.html
@@ -22,45 +22,68 @@
 <!--final bond-->
 <div class="artwork" id="final bond" ></div>
 <img src="/Photo-webpage/Acrylic - Final Bond.jpg" 
-alt=""
+alt="Title: Final Bond. Actrylic and oil on canvas. A female portrait set on a wild background of inter-flowing colours and shapes, clouds and planets, feathers and stars. The main colours are pink, blue, and orange"
 width="100%">
-<p>
+<p><strong>
+    Final Bond
+</strong>
+ - Acrylic & Oil on canvas. Inspired by a conversation with a friend, signifying the final bond needed in becoming close.
 
 </p>
 
 <!--Medusa-->
 <div class="artwork" id="medusa" ></div>
 <img src="/Photo-webpage/Medusa - WIP.jpg" 
-alt=""
+alt="Title: Medusa. Watercolor and Ink on hot-pressed paper. A female bust-portrait, with elongated neck and extended mouth.Composition is somewhat unsaturated, playing off the cool blue tones present"
 width="100%">
-<p>
-
+<p><strong>
+    Medusa
+</strong>
+- Watercolour & Ink on hot-pressed paper. Inspired by the Greek myth of Medusa and Posidon.
 </p>
 
 <!--formal-->
 <div class="artwork" id="formal" ></div>
 <img src="/Photo-webpage/Formal.jpg" 
-alt=""
+alt="Title: Formal. Ink on cold-pressed paper. A black & white composition of a woman in black. Negative space is used to create the shap of her torso, and her hair moves like liquid into the top of the composition"
 width="100%">
 <p>
-
+<strong>
+    Formal
+</strong>
+- Ink on Cold-pressed paper. Inspired by the song "<em>Echo Sax End</em>" by Caleb Arredondo.
 </p>
 
 <!--Joyride-->
 <div class="artwork" id="joyride" ></div>
 <img src="/Photo-webpage/JoyRide.png" 
-alt=""
+alt="Title: Joyride. Digital media. Vibrant, neon portrait composition of a demon girl with a wild expression. Background is a starry gradient from deep navy to muted purple. "
 width="100%">
 <p>
-
+<strong>
+    Joyride
+</strong>
+- Digital media. Inspired by the song "<em> Joyride</em>" by Kesha
 </p>
 
 <!--windswept-->
 <div class="artwork" id="classic" ></div>
 <img src="/Photo-webpage/Windswept - classic.jpg" 
-alt=""
+alt="Title: Windswept. Alcohol ink on cold-pressed paper. Close-up portrait of woman's face. Composition is blue and green in tone. Woman's expression is placid, her angular blue and black hair being blown across her face and the composition by an unseen wind."
 width="100%">
 <p>
-
+<strong>
+    Windswept
+</strong>
+- Alcohol ink on cold-pressed paper. Inspired by the view of Calgary's city centre from the peak of edworthy park, a mix of nature and structure. 
 </p>
 </div>
+
+<hr>
+
+<!--footer-->
+<footer>
+    <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+    <p></p>
+  </footer>
+  
