--- a/index.html
+++ b/index.html
@@ -52,19 +52,21 @@ tr:hover {background-color: #c6a9ce;}
   <div class="artwork" >
       <img src="./Photo-webpage/Medusa - WIP.jpg" 
       alt="An interpretation of medusa: a long-necked woman with dramatically enlarged eyes. Done in watervolor and Ink by Rachel Payette"
-      height="200">
+      height="200"
+      width="216">
     </div>
 
   <div class="artwork" id="JoyRide" >
       <img src="./Photo-webpage/JoyRide.png"
       alt="Demon-girl in neon colors with two horns extending off pahe. Wild expression and open mouth. Done in digital art style. by Rachel Payette"
-      height="200">
+      height="350">
   </div>
 
   <div class="artwork" id="windswept" >
       <img src="./Photo-webpage/Windswept - classic.jpg"
       alt="Green mother-earth looking woman, with angular blue and black hair blowing to the left, as if by the wind. Digital media medium. by Rachel Payette"
-      height="200">
+      height="200"
+      width="216">
   </div>
   </div>
 
