Docs: hosting file-pull bug fix
Fixing issues seen when site is hosted. Open and stray tags.

--- a/Pages/About me/index.html
+++ b/Pages/About me/index.html
@@ -1,3 +1,13 @@
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>about me</title>
+ </head>
+    
+ <body>
+ </html>
  <!--Link to css-->
  <link href="/Pages/About me/main.css"
  rel="stylesheet" type="text/css">
@@ -37,6 +47,7 @@
 <h2> Thank you for visiting my site. 
 </h2>
 <h3> Please feel free to reach out if you have any questions or requests</h3>
+</body>
 
 <!--footer-->
 <footer>
