--- a/Pages/Illustrations/index.html
+++ b/Pages/Illustrations/index.html
@@ -1,6 +1,20 @@
- <!--Link to css-->
- <link href="/Pages/Illustrations/main.css"
- rel="stylesheet" type="text/css">
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    
+    <!--Link to css-->
+    <link href="/Pages/Illustrations/main.css"
+    rel="stylesheet" type="text/css">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Illustrations</title>
+ </head>
+
+ <body>
+    
+
+
 
  <!--heading-->
 <header>
@@ -80,10 +94,11 @@ width="100%">
 </div>
 
 <hr>
-
+</body>
 <!--footer-->
 <footer>
     <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
     <p></p>
   </footer>
   
+  </html>
