--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ th, td {
 
 tr:hover {background-color: #c6a9ce;}
   </style>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,13 +23,14 @@ tr:hover {background-color: #c6a9ce;}
     <link rel="icon" type="image/x-icon" href="./Photo-webpage/favicon.ico"
     >
 </head>
+
 <body>
 <!--first section-->
     
 <!--Images top-->
 
 
- <img src="./Photo-webpage/R VI Logo.png" 
+ <img src="/Photo-webpage/R VI Logo.png" 
  alt="R logo with ink splatter effect to create an image that shows R and Vi"
  height="90"
  class="logo"
