--- a/Pages/Illustrations/index.html
+++ b/Pages/Illustrations/index.html
@@ -25,7 +25,7 @@
  <nav>
     <ul>
         <li><a href="/index.html">Home</a></li>
-        <li><a href="/Pages/About me/index.html">About Me </a></li>
+        <li><a href="/Pages/About-me/index.html">About Me </a></li>
         <li><a href="/Pages/process/index.html"> Process</a> </li>
     </ul>
 </nav>
@@ -35,7 +35,7 @@
 
 <!--final bond-->
 <div class="artwork" id="final bond" ></div>
-<img src="/Photo-webpage/Acrylic - Final Bond.jpg" 
+<img src="/Photo-webpage/Acrylic-FinalBond.jpg" 
 alt="Title: Final Bond. Actrylic and oil on canvas. A female portrait set on a wild background of inter-flowing colours and shapes, clouds and planets, feathers and stars. The main colours are pink, blue, and orange"
 width="100%">
 <p><strong>
@@ -47,7 +47,7 @@ width="100%">
 
 <!--Medusa-->
 <div class="artwork" id="medusa" ></div>
-<img src="/Photo-webpage/Medusa - WIP.jpg" 
+<img src="/Photo-webpage/Medusa-WIP.jpg" 
 alt="Title: Medusa. Watercolor and Ink on hot-pressed paper. A female bust-portrait, with elongated neck and extended mouth.Composition is somewhat unsaturated, playing off the cool blue tones present"
 width="100%">
 <p><strong>
@@ -82,7 +82,7 @@ width="100%">
 
 <!--windswept-->
 <div class="artwork" id="classic" ></div>
-<img src="/Photo-webpage/Windswept - classic.jpg" 
+<img src="/Photo-webpage/Windswept-classic.jpg" 
 alt="Title: Windswept. Alcohol ink on cold-pressed paper. Close-up portrait of woman's face. Composition is blue and green in tone. Woman's expression is placid, her angular blue and black hair being blown across her face and the composition by an unseen wind."
 width="100%">
 <p>
@@ -100,5 +100,5 @@ width="100%">
     <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
     <p></p>
   </footer>
-  
+
   </html>
