docs: troubleshooting CSS
Changes multiple css pages over to one main css page.
removed spacing from file names

--- a/Pages/About-me/index.html
+++ b/Pages/About-me/index.html
@@ -9,7 +9,7 @@
  <body>
  </html>
  <!--Link to css-->
- <link href="/Pages/About me/main.css"
+ <link href="/CSS/main.css"
  rel="stylesheet" type="text/css">
 
  <!--heading-->
