--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@ tr:hover {background-color: #c6a9ce;}
     <ul>
         <li><a href="./Pages/Illustrations/index.html">Illustrations </a></li>
         <li><a href="./Pages/process/index.html">Process</a></li>
-        <li><a href="./Pages/About me/index.html"> About Me</a> </li>
+        <li><a href="./Pages/About-me/index.html"> About Me</a> </li>
     </ul>
 </nav>
 
 <!--Image set-->
 <div id="Showcase" id="medusa" >
   <div class="artwork" >
-      <img src="./Photo-webpage/Medusa - WIP.jpg" 
+      <img src="./Photo-webpage/Medusa-WIP.jpg" 
       alt="An interpretation of medusa: a long-necked woman with dramatically enlarged eyes. Done in watervolor and Ink by Rachel Payette"
       height="200"
       width="216">
@@ -66,7 +66,7 @@ tr:hover {background-color: #c6a9ce;}
   </div>
 
   <div class="artwork" id="windswept" >
-      <img src="./Photo-webpage/Windswept - classic.jpg"
+      <img src="./Photo-webpage/Windswept-classic.jpg"
       alt="Green mother-earth looking woman, with angular blue and black hair blowing to the left, as if by the wind. Digital media medium. by Rachel Payette"
       height="200"
       width="216">
