docs: fixed about me issue
changed about me to about-me in illustrations nav

--- a/Pages/process/index.html
+++ b/Pages/process/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/Pages/Illustrations/index.html">Illustrations </a></li>
-        <li><a href="/Pages/About me/index.html"> About Me</a> </li>
+        <li><a href="/Pages/About-me/index.html"> About Me</a> </li>
     </ul>
 </nav>
 
