docs: Tag edits
Adjusted end-tag locations. Fixed capitalization on process-nav

--- a/Pages/About-me/index.html
+++ b/Pages/About-me/index.html
@@ -7,7 +7,7 @@
  </head>
     
  <body>
- </html>
+ 
  <!--Link to css-->
  <link href="/CSS/main.css"
  rel="stylesheet" type="text/css">
@@ -22,7 +22,7 @@
     <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/Pages/Illustrations/index.html">Illustrations </a></li>
-        <li><a href="/Pages/process/index.html"> process</a> </li>
+        <li><a href="/Pages/process/index.html"> Process</a> </li>
     </ul>
 </nav>
 
@@ -49,8 +49,11 @@
 <h3> Please feel free to reach out if you have any questions or requests</h3>
 </body>
 
+<hr>
+
 <!--footer-->
 <footer>
     <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
     <p></p>
   </footer>
+  </html>
