--- a/Pages/process/index.html
+++ b/Pages/process/index.html
@@ -1,3 +1,13 @@
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About me</title>
+ </head>
+ <body>
+    
+ 
  <!--Link to css-->
  <link href="/CSS/main.css"
  rel="stylesheet" type="text/css">
@@ -75,8 +85,13 @@
     <li> complete the piece in the medium and style that best fits, balancing texture, depth, and form </li>
    </ol>
 
+</body>
+
+
    <!--footer-->
 <footer>
     <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
     <p></p>
   </footer>
+  
+  </html>
