--- a/Pages/Illustrations/index.html
+++ b/Pages/Illustrations/index.html
@@ -25,7 +25,7 @@
  <nav>
     <ul>
         <li><a href="/index.html">Home</a></li>
-        <li><a href="/Pages/About-me/index.html">About Me </a></li>
+        <li><a href="../About-me/index.html">About Me </a></li>
         <li><a href="/Pages/process/index.html"> Process</a> </li>
     </ul>
 </nav>
@@ -34,7 +34,7 @@
 <div id="Collection">
 
 <!--final bond-->
-<div class="gallery" id="final bond" ></div>
+<div class="gallery" id="final-bond" ></div>
 <img src="/Photo-webpage/Acrylic-FinalBond.jpg" 
 alt="Title: Final Bond. Actrylic and oil on canvas. A female portrait set on a wild background of inter-flowing colours and shapes, clouds and planets, feathers and stars. The main colours are pink, blue, and orange"
 width="100%">
@@ -81,7 +81,7 @@ width="100%">
 </p>
 
 <!--windswept-->
-<div class="gallery" id="classic" ></div>
+<div class="gallery" id="windswept" ></div>
 <img src="/Photo-webpage/Windswept-classic.jpg" 
 alt="Title: Windswept. Alcohol ink on cold-pressed paper. Close-up portrait of woman's face. Composition is blue and green in tone. Woman's expression is placid, her angular blue and black hair being blown across her face and the composition by an unseen wind."
 width="100%">
