Docs: Troubleshooting navs
changed illustration nav links to <li><a href="/index.html">Home</a></li>
        <li><a href="../About-me/index.html">About Me </a></li>
        <li><a href="./Pages/process/index.html"> Process</a> </li>

instead of all just / file

--- a/Pages/Illustrations/index.html
+++ b/Pages/Illustrations/index.html
@@ -26,7 +26,7 @@
     <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="../About-me/index.html">About Me </a></li>
-        <li><a href="/Pages/process/index.html"> Process</a> </li>
+        <li><a href="./Pages/process/index.html"> Process</a> </li>
     </ul>
 </nav>
 
