--- a/Pages/About-me/index.html
+++ b/Pages/About-me/index.html
@@ -20,9 +20,9 @@
  <!--navigation-->
  <nav>
     <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/Pages/Illustrations/index.html">Illustrations </a></li>
-        <li><a href="/Pages/process/index.html"> Process</a> </li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Pages/Illustrations/index.html">Illustrations </a></li>
+        <li><a href="../Pages/process/index.html"> Process</a> </li>
     </ul>
 </nav>
 
