--- a/Pages/Illustrations/index.html
+++ b/Pages/Illustrations/index.html
@@ -24,9 +24,9 @@
  <!--navigation-->
  <nav>
     <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../About-me/index.html">About Me </a></li>
-        <li><a href="./Pages/process/index.html"> Process</a> </li>
+        <li><a href="../Pages/process/index.html"> Process</a> </li>
     </ul>
 </nav>
 
