--- a/Pages/process/index.html
+++ b/Pages/process/index.html
@@ -21,9 +21,9 @@
  <!--navigation-->
  <nav>
     <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/Pages/Illustrations/index.html">Illustrations </a></li>
-        <li><a href="/Pages/About-me/index.html"> About Me</a> </li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Pages/Illustrations/index.html">Illustrations </a></li>
+        <li><a href="../Pages/About-me/index.html"> About Me</a> </li>
     </ul>
 </nav>
 
