Docs: Troubleshooting file paths
Working on getting images to appear on hosted page. Testing out file pathing routes.

--- a/Pages/About-me/index.html
+++ b/Pages/About-me/index.html
@@ -9,7 +9,7 @@
  <body>
  
  <!--Link to css-->
- <link href="/CSS/main.css"
+ <link href="../../CSS/main.css"
  rel="stylesheet" type="text/css">
 
  <!--heading-->
@@ -20,7 +20,7 @@
  <!--navigation-->
  <nav>
     <ul>
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="../../index.html">Home</a></li>
         <li><a href="../Pages/Illustrations/index.html">Illustrations </a></li>
         <li><a href="../Pages/process/index.html"> Process</a> </li>
     </ul>
