--- a/Pages/Illustrations/index.html
+++ b/Pages/Illustrations/index.html
@@ -3,7 +3,7 @@
  <head>
     
     <!--Link to css-->
-    <link href="/CSS/main.css"
+    <link href="../../CSS/main.css"
     rel="stylesheet" type="text/css">
 
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@
 
 <!--final bond-->
 <div class="gallery" id="final-bond" ></div>
-<img src="/Photo-webpage/Acrylic-FinalBond.jpg" 
+<img src="../Photo-webpage/Acrylic-FinalBond.jpg" 
 alt="Title: Final Bond. Actrylic and oil on canvas. A female portrait set on a wild background of inter-flowing colours and shapes, clouds and planets, feathers and stars. The main colours are pink, blue, and orange"
 width="100%">
 <p><strong>
