--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ tr:hover {background-color: #c6a9ce;}
 <!--Images top-->
 
 
- <img src="/Photo-webpage/RVILogo.png" 
+ <img src="./Photo-webpage/RVILogo.png" 
  alt="R logo with ink splatter effect to create an image that shows R and Vi"
  height="90"
  class="logo"
