docs: photo file path troubleshooting
more combinations to try and get working

--- a/Pages/Illustrations/index.html
+++ b/Pages/Illustrations/index.html
@@ -70,7 +70,7 @@ width="100%">
 
 <!--Joyride-->
 <div class="gallery" id="joyride" ></div>
-<img src="../Photo-webpage/JoyRide.png" 
+<img src="../../Photo-webpage/JoyRide.png" 
 alt="Title: Joyride. Digital media. Vibrant, neon portrait composition of a demon girl with a wild expression. Background is a starry gradient from deep navy to muted purple. "
 width="100%">
 <p>
