--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -9,7 +9,7 @@
  <body>
  
  <!--Link to css-->
- <link href="../../CSS/main.css"
+ <link href="../CSS/main.css"
  rel="stylesheet" type="text/css">
 
  <!--heading-->
@@ -20,9 +20,9 @@
  <!--navigation-->
  <nav>
     <ul>
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="../Illustrations/index.html">Illustrations </a></li>
-        <li><a href="../process/index.html"> Process</a> </li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="illustrations.html">Illustrations </a></li>
+        <li><a href="process.html"> Process</a> </li>
     </ul>
 </nav>
 
