--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -3,7 +3,7 @@
  <head>
     
     <!--Link to css-->
-    <link href="../../CSS/main.css"
+    <link href="../CSS/main.css"
     rel="stylesheet" type="text/css">
 
     <meta charset="UTF-8">
@@ -24,9 +24,9 @@
  <!--navigation-->
  <nav>
     <ul>
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="../About-me/index.html">About Me </a></li>
-        <li><a href="../process/index.html"> Process</a> </li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about-me.html">About Me </a></li>
+        <li><a href="process.html"> Process</a> </li>
     </ul>
 </nav>
 
