--- a/Pages/process.html
+++ b/Pages/process.html
@@ -9,7 +9,7 @@
     
  
  <!--Link to css-->
- <link href="../../CSS/main.css"
+ <link href="../CSS/main.css"
  rel="stylesheet" type="text/css">
 
 
@@ -21,9 +21,9 @@
  <!--navigation-->
  <nav>
     <ul>
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="../Illustrations/index.html">Illustrations </a></li>
-        <li><a href="../About-me/index.html"> About Me</a> </li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="illustrations.html">Illustrations </a></li>
+        <li><a href="about-me.html"> About Me</a> </li>
     </ul>
 </nav>
 
