Docs: File path fix - main nav

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ tr:hover {background-color: #c6a9ce;}
 <!--navigation-->
  <nav>
     <ul>
-        <li><a href="./Pages/illustrations.html">Illustrations </a></li>
-        <li><a href="./Pages/process.html">Process</a></li>
-        <li><a href="./Pages/about-me.html"> About Me</a> </li>
+        <li><a href="Pages/illustrations.html">Illustrations </a></li>
+        <li><a href="Pages/process.html">Process</a></li>
+        <li><a href="Pages/about-me.html"> About Me</a> </li>
     </ul>
 </nav>
 
