Docs: file path testing. photos into pages
another attempt for illustration page to load pages. here's hoping...

moves all photos into pages so same level as illustration.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ tr:hover {background-color: #c6a9ce;}
 <!--Images top-->
 
 
- <img src="./Photo-webpage/RVILogo.png" 
+ <img src="Pages/Photo-webpage/RVILogo.png" 
  alt="R logo with ink splatter effect to create an image that shows R and Vi"
  height="90"
  class="logo"
@@ -53,20 +53,20 @@ tr:hover {background-color: #c6a9ce;}
 <!--Image set-->
 <div id="Showcase" id="medusa" >
   <div class="artwork" >
-      <img src="./Photo-webpage/Medusa-WIP.jpg" 
+      <img src="Pages/Photo-webpage/Medusa-WIP.jpg" 
       alt="An interpretation of medusa: a long-necked woman with dramatically enlarged eyes. Done in watervolor and Ink by Rachel Payette"
       height="200"
       width="216">
     </div>
 
   <div class="artwork" id="JoyRide" >
-      <img src="./Photo-webpage/JoyRide.png"
+      <img src="Pages/Photo-webpage/JoyRide.png"
       alt="Demon-girl in neon colors with two horns extending off pahe. Wild expression and open mouth. Done in digital art style. by Rachel Payette"
       height="350">
   </div>
 
   <div class="artwork" id="windswept" >
-      <img src="./Photo-webpage/Windswept-classic.jpg"
+      <img src="Pages/Photo-webpage/Windswept-classic.jpg"
       alt="Green mother-earth looking woman, with angular blue and black hair blowing to the left, as if by the wind. Digital media medium. by Rachel Payette"
       height="200"
       width="216">
