Docs: img file paths FIXED!
Moving file paths seems to have worked. final (hopefully) test!

--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -47,7 +47,7 @@ width="100%">
 
 <!--Medusa-->
 <div class="gallery" id="medusa" ></div>
-<img src="/Photo-webpage/Medusa-WIP.jpg" 
+<img src="Photo-webpage/Medusa-WIP.jpg" 
 alt="Title: Medusa. Watercolor and Ink on hot-pressed paper. A female bust-portrait, with elongated neck and extended mouth.Composition is somewhat unsaturated, playing off the cool blue tones present"
 width="100%">
 <p><strong>
@@ -58,7 +58,7 @@ width="100%">
 
 <!--formal-->
 <div class="gallery" id="formal" ></div>
-<img src="./Photo-webpage/Formal.jpg" 
+<img src="Photo-webpage/Formal.jpg" 
 alt="Title: Formal. Ink on cold-pressed paper. A black & white composition of a woman in black. Negative space is used to create the shap of her torso, and her hair moves like liquid into the top of the composition"
 width="100%">
 <p>
@@ -70,7 +70,7 @@ width="100%">
 
 <!--Joyride-->
 <div class="gallery" id="joyride" ></div>
-<img src="../../Photo-webpage/JoyRide.png" 
+<img src="Photo-webpage/JoyRide.png" 
 alt="Title: Joyride. Digital media. Vibrant, neon portrait composition of a demon girl with a wild expression. Background is a starry gradient from deep navy to muted purple. "
 width="100%">
 <p>
@@ -82,7 +82,7 @@ width="100%">
 
 <!--windswept-->
 <div class="gallery" id="windswept" ></div>
-<img src="../../Windswept-classic.jpg" 
+<img src="Photo-webpage/Windswept-classic.jpg" 
 alt="Title: Windswept. Alcohol ink on cold-pressed paper. Close-up portrait of woman's face. Composition is blue and green in tone. Woman's expression is placid, her angular blue and black hair being blown across her face and the composition by an unseen wind."
 width="100%">
 <p>
