--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -34,10 +34,15 @@
 <div id="Collection">
 
 <!--final bond-->
-<div class="gallery" id="final-bond" ></div>
+<div class="gallery" id="final-bond" >
+    <div class="spacer"></div>
+    
 <img src="Photo-webpage/Acrylic-FinalBond.jpg" 
 alt="Title: Final Bond. Actrylic and oil on canvas. A female portrait set on a wild background of inter-flowing colours and shapes, clouds and planets, feathers and stars. The main colours are pink, blue, and orange"
 width="100%">
+<div class="spacer"></div>
+</div>
+
 <p><strong>
     Final Bond
 </strong>
@@ -46,10 +51,10 @@ width="100%">
 </p>
 
 <!--Medusa-->
-<div class="gallery" id="medusa" ></div>
+<div class="gallery" id="medusa" >
 <img src="Photo-webpage/Medusa-WIP.jpg" 
 alt="Title: Medusa. Watercolor and Ink on hot-pressed paper. A female bust-portrait, with elongated neck and extended mouth.Composition is somewhat unsaturated, playing off the cool blue tones present"
-width="100%">
+width="100%"></div>
 <p><strong>
     Medusa
 </strong>
@@ -57,10 +62,10 @@ width="100%">
 </p>
 
 <!--formal-->
-<div class="gallery" id="formal" ></div>
+<div class="gallery" id="formal" >
 <img src="Photo-webpage/Formal.jpg" 
 alt="Title: Formal. Ink on cold-pressed paper. A black & white composition of a woman in black. Negative space is used to create the shap of her torso, and her hair moves like liquid into the top of the composition"
-width="100%">
+width="100%"></div>
 <p>
 <strong>
     Formal
@@ -69,10 +74,10 @@ width="100%">
 </p>
 
 <!--Joyride-->
-<div class="gallery" id="joyride" ></div>
+<div class="gallery" id="joyride" >
 <img src="Photo-webpage/JoyRide.png" 
 alt="Title: Joyride. Digital media. Vibrant, neon portrait composition of a demon girl with a wild expression. Background is a starry gradient from deep navy to muted purple. "
-width="100%">
+width="100%"></div>
 <p>
 <strong>
     Joyride
@@ -81,16 +86,17 @@ width="100%">
 </p>
 
 <!--windswept-->
-<div class="gallery" id="windswept" ></div>
+<div class="gallery" id="windswept" >
 <img src="Photo-webpage/Windswept-classic.jpg" 
 alt="Title: Windswept. Alcohol ink on cold-pressed paper. Close-up portrait of woman's face. Composition is blue and green in tone. Woman's expression is placid, her angular blue and black hair being blown across her face and the composition by an unseen wind."
-width="100%">
+width="100%"></div>
 <p>
 <strong>
     Windswept
 </strong>
 - Alcohol ink on cold-pressed paper. Inspired by the view of Calgary's city centre from the peak of edworthy park, a mix of nature and structure. 
 </p>
+
 </div>
 
 <hr>
