Docs: Final touches
Added decorative text (read: emojis) as they can be added in html rather than CSS.
Finally finished :)
Cheers,

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -14,7 +14,7 @@
 
  <!--heading-->
 <header>
-    <h1> About Me  </h1>  
+    <h1> &#127800 About Me &#127800</h1>  
    </header>
 
  <!--navigation-->
@@ -46,7 +46,11 @@
 </p>
 <h2> Thank you for visiting my site. 
 </h2>
-<h3> Please feel free to reach out if you have any questions or requests</h3>
+<h3> 
+    &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 
+    <br>
+    <br>
+    Please feel free to reach out if you have any questions or requests</h3>
 </body>
 
 <hr>
