--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -8,7 +8,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Illustrations</title>
+    <title> Illustrations</title>
  </head>
 
  <body>
@@ -18,7 +18,7 @@
 
  <!--heading-->
 <header>
-    <h1> Illustrations </h1>  
+    <h1> &#127800 Illustrations &#127800</h1>  
    </header>
 
  <!--navigation-->
@@ -44,7 +44,7 @@ width="100%">
 </div>
 
 <p><strong>
-    Final Bond
+    &#127989 Final Bond
 </strong>
  - Acrylic & Oil on canvas. Inspired by a conversation with a friend, signifying the final bond needed in becoming close.
 
@@ -56,7 +56,7 @@ width="100%">
 alt="Title: Medusa. Watercolor and Ink on hot-pressed paper. A female bust-portrait, with elongated neck and extended mouth.Composition is somewhat unsaturated, playing off the cool blue tones present"
 width="100%"></div>
 <p><strong>
-    Medusa
+    &#127989 Medusa
 </strong>
 - Watercolour & Ink on hot-pressed paper. Inspired by the Greek myth of Medusa and Posidon.
 </p>
@@ -68,7 +68,7 @@ alt="Title: Formal. Ink on cold-pressed paper. A black & white composition of a 
 width="100%"></div>
 <p>
 <strong>
-    Formal
+    &#127989 Formal
 </strong>
 - Ink on Cold-pressed paper. Inspired by the song "<em>Echo Sax End</em>" by Caleb Arredondo.
 </p>
@@ -80,7 +80,7 @@ alt="Title: Joyride. Digital media. Vibrant, neon portrait composition of a demo
 width="100%"></div>
 <p>
 <strong>
-    Joyride
+    &#127989 Joyride
 </strong>
 - Digital media. Inspired by the song "<em> Joyride</em>" by Kesha
 </p>
@@ -92,7 +92,7 @@ alt="Title: Windswept. Alcohol ink on cold-pressed paper. Close-up portrait of w
 width="100%"></div>
 <p>
 <strong>
-    Windswept
+    &#127989  Windswept
 </strong>
 - Alcohol ink on cold-pressed paper. Inspired by the view of Calgary's city centre from the peak of edworthy park, a mix of nature and structure. 
 </p>
