--- a/Pages/process.html
+++ b/Pages/process.html
@@ -16,7 +16,7 @@
 <!--About process-->
 <section>
     <header>
-    <h2> My Creative Process  (づ ◕‿◕ )づ</h2>
+    <h2> &#127800 My Creative Process &#127800</h2>
 </header>
  <!--navigation-->
  <nav>
