--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ tr:hover {background-color: #c6a9ce;}
  >
  <!--Heading-->
  <header>
- <h2> Visual Artist</h2>  
+ <h2> &#127893 Visual Artist &#127893</h2>  
 </header>
 
 <!--navigation-->
