docs: added aria
Added aria to label for screen reading augmentation

--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -17,8 +17,8 @@
 
 
  <!--heading-->
-<header>
-    <h1> &#127800 Illustrations &#127800</h1>  
+<header aria-label="Illustrations">
+    <h1 aria-hidden="true"> &#127800 Illustrations &#127800</h1>  
    </header>
 
  <!--navigation-->
