Docs: HTML cleanup crew
Tidying up code, limiting unnecessary lines, also adjusting bulky or unneeded CSS lines.
Wow, my code is messy :p

--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -31,16 +31,15 @@
 </nav>
 
 <!--Photos of my artwork-->
-<div id="Collection">
 
-<!--final bond-->
-<div class="gallery" id="final-bond" >
-    <div class="spacer"></div>
+<section id="collection">
     
+<!--final bond-->
+<div class="gallery" >
+        
 <img src="Photo-webpage/Acrylic-FinalBond.jpg" 
 alt="Title: Final Bond. Actrylic and oil on canvas. A female portrait set on a wild background of inter-flowing colours and shapes, clouds and planets, feathers and stars. The main colours are pink, blue, and orange"
-width="100%">
-<div class="spacer"></div>
+>
 </div>
 
 <p><strong>
@@ -51,10 +50,10 @@ width="100%">
 </p>
 
 <!--Medusa-->
-<div class="gallery" id="medusa" >
+<div class="gallery" >
 <img src="Photo-webpage/Medusa-WIP.jpg" 
-alt="Title: Medusa. Watercolor and Ink on hot-pressed paper. A female bust-portrait, with elongated neck and extended mouth.Composition is somewhat unsaturated, playing off the cool blue tones present"
-width="100%"></div>
+alt="Title: Medusa. Watercolor and Ink on hot-pressed paper. A female bust-portrait, with elongated neck and extended mouth.Composition is somewhat unsaturated, playing off the cool blue tones present">
+</div>
 <p><strong>
     &#127989 Medusa
 </strong>
@@ -62,10 +61,10 @@ width="100%"></div>
 </p>
 
 <!--formal-->
-<div class="gallery" id="formal" >
+<div class="gallery">
 <img src="Photo-webpage/Formal.jpg" 
-alt="Title: Formal. Ink on cold-pressed paper. A black & white composition of a woman in black. Negative space is used to create the shap of her torso, and her hair moves like liquid into the top of the composition"
-width="100%"></div>
+alt="Title: Formal. Ink on cold-pressed paper. A black & white composition of a woman in black. Negative space is used to create the shap of her torso, and her hair moves like liquid into the top of the composition">
+</div>
 <p>
 <strong>
     &#127989 Formal
@@ -74,10 +73,11 @@ width="100%"></div>
 </p>
 
 <!--Joyride-->
-<div class="gallery" id="joyride" >
+<div class="gallery">
 <img src="Photo-webpage/JoyRide.png" 
-alt="Title: Joyride. Digital media. Vibrant, neon portrait composition of a demon girl with a wild expression. Background is a starry gradient from deep navy to muted purple. "
-width="100%"></div>
+alt="Title: Joyride. Digital media. Vibrant, neon portrait composition of a demon girl with a wild expression. Background is a starry gradient from deep navy to muted purple. ">
+</div>
+
 <p>
 <strong>
     &#127989 Joyride
@@ -86,8 +86,9 @@ width="100%"></div>
 </p>
 
 <!--windswept-->
-<div class="gallery" id="windswept" >
+<div class="gallery">
 <img src="Photo-webpage/Windswept-classic.jpg" 
+
 alt="Title: Windswept. Alcohol ink on cold-pressed paper. Close-up portrait of woman's face. Composition is blue and green in tone. Woman's expression is placid, her angular blue and black hair being blown across her face and the composition by an unseen wind."
 width="100%"></div>
 <p>
@@ -98,6 +99,9 @@ width="100%"></div>
 </p>
 
 </div>
+
+</div>
+</section>
 
 <hr>
 </body>
