--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ tr:hover {background-color: #c6a9ce;}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RachelPayette - Artist</title>
-    <link rel="icon" type="image/x-icon" href="./Photo-webpage/favicon.ico"
+    <link rel="icon" type="image/x-icon" href="./Pages/Photo-webpage/favicon.ico"
     >
 </head>
 
