Docs: CSS adjustments and HTML cleanup
Added a lot of general page elements for CSS. Tidied up the HTML a bit. reduced redundancies.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   width: 100%;
 }
 
+
 th, td {
   padding: 8px;
   text-align: left;
@@ -103,7 +104,7 @@ background-color:#9A5C94;"
   >Contact me on</h2>
 
 <table>
-    <tr style="color:#4a0c44;text-align: left;">
+    <tr style="color:#000000;text-align: left;">
       <th>Social Media</th>
       <th>Handle</th>
       <th>Reason</th>
